# Kalkulacka

./: CMakeLists.txt
Kalkulacka/: CMakeLists.txt  Kalkulacka.cpp  Kalkulacka.h
